# theclicker-gui

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
src/: app.rs  config.rs  input.rs  main.rs  tray.rs  types.rs  widgets.rs
