[package]
name = "theclicker-gui"
version = "0.1.0"
edition = "2024"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.dev.package."*"]
opt-level = 2

[dependencies]
eframe = { version = "0.33.3", features = ["persistence"] }
theclicker = "0.3.1"
serde = { version = "1.0.228", features = ["derive"] }
input-linux = "0.7.1"
ksni = { version = "0.3.3", default-features = false, features = ["blocking", "async-io"] }
