[package]
name = "theclicker-gui"
version = "0.2.0"
edition = "2024"
description = "A graphical frontend for theclicker — a Linux autoclicker for X11 and Wayland"
license = "MIT"
repository = "https://github.com/Arrelin/theclicker-gui"
readme = "README.md"
keywords = ["autoclicker", "gui", "theclicker", "linux"]
categories = ["gui"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.dev.package."*"]
opt-level = 2

[dependencies]
eframe = { version = "0.33.3", default-features = false, features = ["glow", "wayland", "x11", "default_fonts", "persistence"] }
theclicker = "0.3.1"
serde = { version = "1.0.228", features = ["derive"] }
input-linux = "0.7.1"
ksni = { version = "0.3.3", default-features = false, features = ["blocking", "async-io"] }
libc = "0.2.183"
log = "0.4"
env_logger = { version = "0.11", default-features = false, features = ["auto-color"] }